credit_cardのjs/トークン作成

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>SampleApp</title>
-    <script>{src: "https://js.pay.jp/", type: "text/javascript"}</script>
+    <script>{src="https://js.pay.jp", type="text/javascript"}</script>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
