--- a/app/views/credit_cards/new.html.haml
+++ b/app/views/credit_cards/new.html.haml
@@ -9,7 +9,7 @@
           %label カード番号
           %span.essential-redBox 必須
           %br
-          = f.text_field :card_number, type: "text", class: "cardNumber-input", id: "card-number", placeholder: "半角数字のみ", maxlength: 16
+          = f.text_field :card_number, type: "text", class: "cardNumber-input", id: "card-number", placeholder: "半角数字のみ", maxlength: "16"
 
         .creditCard-wrapper__inner__form__dayLimit
           %label 有効期限
@@ -25,7 +25,7 @@
           %label セキュリティーコード
           %span.essential-redBox 必須
           %br
-          = f.text_field :cvc, type: 'text', class: 'security-input', id: 'cvc', placeholder: "カード背面4ケタor3ケタの番号", maxlength: "4"
+          = f.text_field :cvc, type: 'text', class: 'security-input', id: 'cvc', placeholder: "カード背面4ケタor3ケタの番号", maxlength: "4", type: "text", id: "payment_card_cvc"
 
         .creditCard-wrapper__inner__form__addBtn
           = link_to "クレジットカードを追加する", credit_cards_path, method: :get, id: 'credit-btn'
